--- a/src/Modules/CrestApps.OrchardCore.AI.Ollama/CrestApps.OrchardCore.AI.Ollama.csproj
+++ b/src/Modules/CrestApps.OrchardCore.AI.Ollama/CrestApps.OrchardCore.AI.Ollama.csproj
@@ -3,7 +3,7 @@
   <PropertyGroup>
     <RootNamespace>$(MSBuildProjectName)</RootNamespace>
     <AddRazorSupportForMvc>true</AddRazorSupportForMvc>
-    <Title>CrestApps OrchardCore AI Module</Title>
+    <Title>CrestApps OrchardCore Ollama Module</Title>
     <Description>
       $(CrestAppsDescription)
 
