--- a/src/Modules/CrestApps.OrchardCore.Users/CrestApps.OrchardCore.Users.csproj
+++ b/src/Modules/CrestApps.OrchardCore.Users/CrestApps.OrchardCore.Users.csproj
@@ -32,4 +32,8 @@
     <ProjectReference Include="..\..\Core\CrestApps.OrchardCore.Users.Core\CrestApps.OrchardCore.Users.Core.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="wwwroot\" />
+  </ItemGroup>
+
 </Project>
