--- a/src/Core/CrestApps.OrchardCore.SignalR.Core/CrestApps.OrchardCore.SignalR.Core.csproj
+++ b/src/Core/CrestApps.OrchardCore.SignalR.Core/CrestApps.OrchardCore.SignalR.Core.csproj
@@ -1,5 +1,15 @@
 <Project Sdk="Microsoft.NET.Sdk">
 
+  <PropertyGroup>
+    <Title>CrestApps OrchardCore SignalR Core</Title>
+    <Description>
+      $(CrestAppsDescription)
+
+      Core services project for the SignalR module.
+    </Description>
+    <PackageTags>$(PackageTags) SignalR</PackageTags>
+  </PropertyGroup>
+
   <ItemGroup>
     <PackageReference Include="Microsoft.AspNetCore.SignalR.Core" />
     <PackageReference Include="OrchardCore.Abstractions" />
