Move AI Chat to seperate module

--- a/src/Modules/CrestApps.OrchardCore.AI/CrestApps.OrchardCore.AI.csproj
+++ b/src/Modules/CrestApps.OrchardCore.AI/CrestApps.OrchardCore.AI.csproj
@@ -17,7 +17,6 @@
   </ItemGroup>
 
   <ItemGroup>
-    <PackageReference Include="Microsoft.AspNetCore.SignalR.Core" />
     <PackageReference Include="Microsoft.Extensions.AI" />
     <PackageReference Include="OrchardCore.Module.Targets" />
     <PackageReference Include="OrchardCore.ContentManagement" />
@@ -36,6 +35,10 @@
     <ProjectReference Include="..\..\Common\CrestApps.Support\CrestApps.Support.csproj" />
     <ProjectReference Include="..\..\Core\CrestApps.OrchardCore.AI.Core\CrestApps.OrchardCore.AI.Core.csproj" />
     <ProjectReference Include="..\..\Core\CrestApps.OrchardCore.SignalR.Core\CrestApps.OrchardCore.SignalR.Core.csproj" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <Folder Include="ViewModels\Sessions\" />
   </ItemGroup>
 
 </Project>
