--- a/src/Modules/CrestApps.OrchardCore.AI.Chat/CrestApps.OrchardCore.AI.Chat.csproj
+++ b/src/Modules/CrestApps.OrchardCore.AI.Chat/CrestApps.OrchardCore.AI.Chat.csproj
@@ -7,7 +7,7 @@
     <Description>
       $(CrestAppsDescription)
 
-      Provides UI to interact with AI models using the profiles.
+      Provides user interface to interact with AI models using the profiles.
     </Description>
     <PackageTags>$(PackageTags) OrchardCoreCMS AI</PackageTags>
   </PropertyGroup>
