Add AddAIProfile extension and add hard dependency on AI module

--- a/src/Modules/CrestApps.OrchardCore.DeepSeek/CrestApps.OrchardCore.DeepSeek.csproj
+++ b/src/Modules/CrestApps.OrchardCore.DeepSeek/CrestApps.OrchardCore.DeepSeek.csproj
@@ -30,4 +30,13 @@
     <ProjectReference Include="..\..\Core\CrestApps.OrchardCore.DeepSeek.Core\CrestApps.OrchardCore.DeepSeek.Core.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <!-- 
+      Ensure this module directly depends on the required packages so that when someone installs it, 
+      they won't need to manually include the AI and SignalR packages. 
+      This guarantees the module functions correctly and resolves the feature dependency.
+    -->
+    <ProjectReference Include="..\CrestApps.OrchardCore.AI\CrestApps.OrchardCore.AI.csproj" />
+  </ItemGroup>
+
 </Project>
