--- a/src/Modules/CrestApps.OrchardCore.DeepSeek/CrestApps.OrchardCore.DeepSeek.csproj
+++ b/src/Modules/CrestApps.OrchardCore.DeepSeek/CrestApps.OrchardCore.DeepSeek.csproj
@@ -17,6 +17,7 @@
   </ItemGroup>
 
   <ItemGroup>
+    <PackageReference Include="Microsoft.Extensions.AI.OpenAI" />
     <PackageReference Include="OrchardCore.Module.Targets" />
     <PackageReference Include="OrchardCore.ContentManagement" />
     <PackageReference Include="OrchardCore.ContentTypes.Abstractions" />
@@ -27,7 +28,6 @@
   <ItemGroup>
     <ProjectReference Include="..\..\Abstractions\CrestApps.OrchardCore.Abstractions\CrestApps.OrchardCore.Abstractions.csproj" />
     <ProjectReference Include="..\..\Core\CrestApps.OrchardCore.AI.Core\CrestApps.OrchardCore.AI.Core.csproj" />
-    <ProjectReference Include="..\..\Core\CrestApps.OrchardCore.DeepSeek.Core\CrestApps.OrchardCore.DeepSeek.Core.csproj" />
   </ItemGroup>
 
   <ItemGroup>
