--- a/src/Abstractions/CrestApps.OrchardCore.Abstractions/CrestApps.OrchardCore.Abstractions.csproj
+++ b/src/Abstractions/CrestApps.OrchardCore.Abstractions/CrestApps.OrchardCore.Abstractions.csproj
@@ -1,20 +1,20 @@
 <Project Sdk="Microsoft.NET.Sdk">
 
-  <PropertyGroup>
-    <RootNamespace>$(MSBuildProjectName.Replace(" ", "_").Replace("Abstractions",""))</RootNamespace>
-    <Title>CrestApps OrchardCore Abstractions</Title>
-    <Description>
-      $(CrestAppsDescription)
+	<PropertyGroup>
+		<RootNamespace>CrestApps.OrchardCore</RootNamespace>
+		<Title>CrestApps OrchardCore Abstractions</Title>
+		<Description>
+			$(CrestAppsDescription)
 
-      Abstractions project for core services.
-    </Description>
-    <PackageTags>$(PackageTags) OrchardCoreCMS Abstractions</PackageTags>
-  </PropertyGroup>
+			Abstractions project for core services.
+		</Description>
+		<PackageTags>$(PackageTags) OrchardCoreCMS Abstractions</PackageTags>
+	</PropertyGroup>
 
-  <ItemGroup>
-    <PackageReference Include="NuGet.Versioning" />
-    <PackageReference Include="OrchardCore.Abstractions" />
-    <PackageReference Include="OrchardCore.Infrastructure.Abstractions" />
-  </ItemGroup>
+	<ItemGroup>
+		<PackageReference Include="NuGet.Versioning" />
+		<PackageReference Include="OrchardCore.Abstractions" />
+		<PackageReference Include="OrchardCore.Infrastructure.Abstractions" />
+	</ItemGroup>
 
 </Project>
