--- a/src/Modules/CrestApps.OrchardCore.Resources/package.json
+++ b/src/Modules/CrestApps.OrchardCore.Resources/package.json
@@ -3,6 +3,7 @@
   "private": true,
   "devDependencies": {
     "vue": "3.5.13",
-    "@fortawesome/fontawesome-free": "6.7.2"
+    "@fortawesome/fontawesome-free": "6.7.2",
+    "easymde": "2.18.0"
   }
 }
