use source instead of type for MCP Connection

--- a/src/Modules/CrestApps.OrchardCore.AI.Mcp.Server/CrestApps.OrchardCore.AI.Mcp.Server.csproj
+++ b/src/Modules/CrestApps.OrchardCore.AI.Mcp.Server/CrestApps.OrchardCore.AI.Mcp.Server.csproj
@@ -12,6 +12,13 @@
     <PackageTags>$(PackageTags) OrchardCoreCMS AI MCP ModelContextProtocol</PackageTags>
   </PropertyGroup>
 
+  <ItemGroup>
+    <Compile Remove="Services\**" />
+    <Content Remove="Services\**" />
+    <EmbeddedResource Remove="Services\**" />
+    <None Remove="Services\**" />
+  </ItemGroup>
+
 
   <ItemGroup>
     <FrameworkReference Include="Microsoft.AspNetCore.App" />
@@ -29,10 +36,6 @@
     <ProjectReference Include="..\..\Abstractions\CrestApps.OrchardCore.Abstractions\CrestApps.OrchardCore.Abstractions.csproj" />
     <ProjectReference Include="..\..\Core\CrestApps.OrchardCore.AI.Core\CrestApps.OrchardCore.AI.Core.csproj" />
     <ProjectReference Include="..\..\Core\CrestApps.OrchardCore.AI.Mcp.Core\CrestApps.OrchardCore.AI.Mcp.Core.csproj" />
-  </ItemGroup>
-
-  <ItemGroup>
-    <Folder Include="Services\" />
   </ItemGroup>
 
 </Project>
