--- a/src/Modules/CrestApps.OrchardCore.AI.Mcp.Server/CrestApps.OrchardCore.AI.Mcp.Server.csproj
+++ b/src/Modules/CrestApps.OrchardCore.AI.Mcp.Server/CrestApps.OrchardCore.AI.Mcp.Server.csproj
@@ -30,4 +30,14 @@
     <ProjectReference Include="..\..\Core\CrestApps.OrchardCore.AI.Mcp.Core\CrestApps.OrchardCore.AI.Mcp.Core.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <!-- 
+      Ensure this module directly depends on the required packages so that when someone installs it, 
+      they won't need to manually include the AI and SignalR packages. 
+      This guarantees the module functions correctly and resolves the feature dependency.
+    -->
+    <ProjectReference Include="..\CrestApps.OrchardCore.AI\CrestApps.OrchardCore.AI.csproj" PrivateAssets="none" />
+    <ProjectReference Include="..\CrestApps.OrchardCore.AI.Mcp\CrestApps.OrchardCore.AI.Mcp.csproj" PrivateAssets="none" />
+  </ItemGroup>
+
 </Project>
