Create AI Agents module

--- a/src/Modules/CrestApps.OrchardCore.AI.Agents/CrestApps.OrchardCore.AI.Agents.csproj
+++ b/src/Modules/CrestApps.OrchardCore.AI.Agents/CrestApps.OrchardCore.AI.Agents.csproj
@@ -1,15 +1,15 @@
-<Project Sdk="Microsoft.NET.Sdk.Razor">
+﻿<Project Sdk="Microsoft.NET.Sdk.Razor">
 
   <PropertyGroup>
     <RootNamespace>$(MSBuildProjectName)</RootNamespace>
     <AddRazorSupportForMvc>true</AddRazorSupportForMvc>
-    <Title>CrestApps OrchardCore OpenAI Module</Title>
+    <Title>CrestApps OrchardCore AI Module</Title>
     <Description>
       $(CrestAppsDescription)
 
-      Enables seamless management of OpenAI models and profiles, offering advanced features for configuring, deploying, and optimizing OpenAI's capabilities.
+      Enables AI Agents that empower AI Profiles to perform tasks within OrchardCore sites.
     </Description>
-    <PackageTags>$(PackageTags) OrchardCoreCMS OpenAI</PackageTags>
+    <PackageTags>$(PackageTags) OrchardCoreCMS AI</PackageTags>
   </PropertyGroup>
 
   <ItemGroup>
@@ -17,23 +17,16 @@
   </ItemGroup>
 
   <ItemGroup>
-    <PackageReference Include="Microsoft.Extensions.AI" />
     <PackageReference Include="OrchardCore.Module.Targets" />
     <PackageReference Include="OrchardCore.ContentManagement" />
     <PackageReference Include="OrchardCore.ContentTypes.Abstractions" />
     <PackageReference Include="OrchardCore.DisplayManagement" />
-    <PackageReference Include="OrchardCore.Recipes.Abstractions" />
-    <PackageReference Include="OrchardCore.ResourceManagement" />
-    <PackageReference Include="OrchardCore.Navigation.Core" />
-    <PackageReference Include="OrchardCore.Workflows.Abstractions" />
-    <PackageReference Include="OrchardCore.Deployment.Abstractions" />
+    <PackageReference Include="OrchardCore.Setup.Core" />
   </ItemGroup>
 
   <ItemGroup>
     <ProjectReference Include="..\..\Abstractions\CrestApps.OrchardCore.Abstractions\CrestApps.OrchardCore.Abstractions.csproj" />
-    <ProjectReference Include="..\..\Abstractions\CrestApps.OrchardCore.AI.Abstractions\CrestApps.OrchardCore.AI.Abstractions.csproj" />
-    <ProjectReference Include="..\..\Core\CrestApps.OrchardCore.AI.Core\CrestApps.OrchardCore.AI.Core.csproj" />
-    <ProjectReference Include="..\..\Core\CrestApps.OrchardCore.OpenAI.Core\CrestApps.OrchardCore.OpenAI.Core.csproj" />
+    <ProjectReference Include="..\CrestApps.OrchardCore.AI\CrestApps.OrchardCore.AI.csproj" />
   </ItemGroup>
 
   <ItemGroup>
