improve function and add users and roles functions.

--- a/src/Modules/CrestApps.OrchardCore.AI.Agents/CrestApps.OrchardCore.AI.Agents.csproj
+++ b/src/Modules/CrestApps.OrchardCore.AI.Agents/CrestApps.OrchardCore.AI.Agents.csproj
@@ -26,6 +26,7 @@
     <PackageReference Include="OrchardCore.Sms.Abstractions" />
     <PackageReference Include="OrchardCore.Users.Abstractions" />
     <PackageReference Include="OrchardCore.Notifications.Core" />
+    <PackageReference Include="OrchardCore.Deployment.Core" />
   </ItemGroup>
 
   <ItemGroup>
