add recipes and deployment-steps and update the documenation

--- a/src/Abstractions/CrestApps.OrchardCore.AI.Abstractions/CrestApps.OrchardCore.AI.Abstractions.csproj
+++ b/src/Abstractions/CrestApps.OrchardCore.AI.Abstractions/CrestApps.OrchardCore.AI.Abstractions.csproj
@@ -20,4 +20,8 @@
     <ProjectReference Include="..\CrestApps.OrchardCore.Abstractions\CrestApps.OrchardCore.Abstractions.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="Extensions\" />
+  </ItemGroup>
+
 </Project>
