--- a/src/Core/CrestApps.OrchardCore.OpenAI.Azure.Core/CrestApps.OrchardCore.OpenAI.Azure.Core.csproj
+++ b/src/Core/CrestApps.OrchardCore.OpenAI.Azure.Core/CrestApps.OrchardCore.OpenAI.Azure.Core.csproj
@@ -18,6 +18,7 @@
     <PackageReference Include="OrchardCore.Search.AzureAI.Core" />
     <PackageReference Include="Microsoft.Extensions.AI" />
     <PackageReference Include="Microsoft.Extensions.AI.OpenAI" />
+    <PackageReference Include="OrchardCore.Search.Elasticsearch.Core" />
   </ItemGroup>
 
   <ItemGroup>
