--- a/Directory.Packages.props
+++ b/Directory.Packages.props
@@ -6,6 +6,7 @@
   </PropertyGroup>
   <ItemGroup>
     <!-- Miscellaneous Packages -->
+    <PackageVersion Include="Aspire.Hosting.MongoDB" Version="9.2.1" />
     <PackageVersion Include="NuGet.Versioning" Version="6.13.2" />
     <PackageVersion Include="YesSql.Abstractions" Version="5.1.1" />
     <PackageVersion Include="ModelContextProtocol" Version="0.1.0-preview.13" />
